--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.4ABD0115" = "back"
+	"last_search.4ABD0115" = "new"
 	"OpenInspectorPreview.4ABD0115" = "0"
 	"currentGroup.4ABD0115" = "all"
 }
